--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input[type="text"],
+input[type="password"] {
+  font-size: 18px;
+  padding: 16px 8px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background-color: #f0f2f5;
 }
