--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,18 +1,14 @@
-.login-wrapper {
+.post-wrapper {
   height: 100vh;
   width: 100vw;
   display: grid;
-  align-items: center;
 }
 
-.login-container {
+.post-container {
   padding: 16px;
 }
 
-.login-card {
-  display: grid;
-  grid-template-rows: 0.5fr 2fr;
-  align-items: center;
+.post-card {
   text-align: center;
   padding: 16px;
   background-color: #fff;
@@ -20,19 +16,13 @@
   box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.25);
 }
 
-.login-card h1 {
-  margin: 0;
-  font-size: 56px;
-}
-
-.login-card form {
-  display: grid;
-  grid-gap: 4px;
+.post-card h2 {
+    margin: 0;
 }
 
 @media screen and (min-width: 768px) {
-  .login-container {
+  .post-container {
     justify-self: center;
-    width: 50%;
+    width: 36%;
   }
 }
