--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f1f2f5;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="submit"] {
+input[type='text'],
+input[type='password'],
+input[type='submit'] {
   font-size: 18px;
   padding: 12px 8px;
   border: none;
@@ -17,12 +18,12 @@ input[type="submit"] {
   border-radius: 4px;
 }
 
-input[type="text"],
-input[type="password"] {
+input[type='text'],
+input[type='password'] {
   background-color: #f1f2f5;
 }
 
-input[type="submit"] {
+input[type='submit'] {
   background-color: #3f3f3f;
   color: #f1f2f5;
   cursor: pointer;
