--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -20,12 +20,12 @@
   box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.25);
 }
 
-.login-card h1 {
+.login-container h1 {
   margin: 0;
   font-size: 56px;
 }
 
-.login-card form {
+.login-container form {
   display: grid;
   grid-gap: 4px;
 }
