--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,11 @@ input[type='submit'] {
   color: #f1f2f5;
   cursor: pointer;
 }
+
+.card {
+  text-align: center;
+  padding: 16px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.25);
+}
