--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,9 @@ body {
 
 input[type='text'],
 input[type='password'],
-input[type='submit'] {
+input[type='submit'],
+textarea,
+button {
   font-size: 18px;
   padding: 12px 8px;
   border: none;
@@ -19,20 +21,39 @@ input[type='submit'] {
 }
 
 input[type='text'],
-input[type='password'] {
+input[type='password'],
+textarea {
   background-color: #f1f2f5;
 }
 
-input[type='submit'] {
+input[type='submit'],
+button {
   background-color: #3f3f3f;
   color: #f1f2f5;
   cursor: pointer;
 }
 
+textarea {
+  resize: none;
+  height: 300px;
+}
+
 .card {
-  text-align: center;
   padding: 16px;
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.25);
+  display: grid;
+  grid-gap: 8px;
+}
+
+.container {
+  padding: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    justify-self: center;
+    width: 50%;
+  }
 }
