--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,12 @@ textarea {
 @media screen and (min-width: 768px) {
   .container {
     justify-self: center;
-    width: 50%;
+    width: 85%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 65%;
   }
 }
